--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
 <meta name="author" content="author"/> 
 <link rel="stylesheet" type="text/css" href="default.css" media="screen"/>
 <title>111540033楊宜庭作業1</title>
+<meta name="google-site-verification" content="AXVIxBtYuoySSvVCb1Q869rce2Gp_poNdZ08TVQziOI" />
+<meta name="description" content="這是楊宜庭作業1，包含程式碼和相關說明。">
+<meta name="keywords" content="楊宜庭, 作業1, SEO, TDK">
 </head>
 
 <body>
